--- a/index.html
+++ b/index.html
@@ -50,29 +50,23 @@
 
 <body style="background: rgb(139,211,230);
 background: linear-gradient(90deg, rgba(139,211,230,1) 0%, rgba(255,105,97,1) 100%);">
-    <div class=" shadow-lg p-3 mb-3 align-middle text-center button-nav"> <span class="name pull-middle button-nav align-middle me-md-5" style="font-size: 4ch;">Commissions</span></div>
-
     <div class="container col-xxl-8 px-4 py-5" id="fade">
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg" style="   background: rgb(216,255,255);
         background: radial-gradient(circle, rgba(216,255,255,1) 43%, rgba(249,235,235,1) 100%);  ">
             <ul class="nav nav-pills nav-fill">
                 <li class="nav-item" style="margin-right: 1ch;">
                     <a id="TL" href="comms.html" class="button-nav">
-                        <div class=" shadow-lg p-3 mb-3 bg-white align-middle text-center" class="button-nav"> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">Commissions</span></div>
+                        <div class="shadow-lg p-3 mb-3 align-middle text-center button-nav"> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">Commissions</span></div>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a id="TL" href="gallery.html" style="  background: rgb(195,215,251);
-                    background: radial-gradient(circle, rgba(195,215,251,1) 49%, rgba(143,236,255,1) 100%);  ">
-                        <div class=" shadow-lg p-3 mb-3 bg-white align-middle text-center" style="  background: rgb(195,215,251);
-                        background: radial-gradient(circle, rgba(195,215,251,1) 49%, rgba(143,236,255,1) 100%);  "> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">Gallery</span></div>
+                <li class="nav-item" style="margin-right: 1ch;">
+                    <a id="TL" href="comms.html" class="button-nav">
+                        <div class="shadow-lg p-3 mb-3 align-middle text-center button-nav"> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">Gallery</span></div>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a id="TL" href="comms.html" style="  background: rgb(195,215,251);
-                    background: radial-gradient(circle, rgba(195,215,251,1) 49%, rgba(143,236,255,1) 100%);  ">
-                        <div class=" shadow-lg p-3 mb-3 bg-white align-middle text-center" style="  background: rgb(195,215,251);
-                        background: radial-gradient(circle, rgba(195,215,251,1) 49%, rgba(143,236,255,1) 100%);  "> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">About me</span></div>
+                <li class="nav-item" style="margin-right: 1ch;">
+                    <a id="TL" href="comms.html" class="button-nav">
+                        <div class="shadow-lg p-3 mb-3 align-middle text-center button-nav"> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">Contact</span></div>
                     </a>
                 </li>
             </ul>
