--- a/index.html
+++ b/index.html
@@ -56,20 +56,22 @@ background: linear-gradient(90deg, rgba(139,211,230,1) 0%, rgba(255,105,97,1) 10
             <ul class="nav nav-pills nav-fill">
                 <li class="nav-item" style="margin-right: 1ch;">
                     <a id="TL" href="comms.html" class="button-nav">
-                        <div class="shadow-lg p-3 mb-3 align-middle text-center button-nav"> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">Commissions</span></div>
+                        <div class="shadow-lg p-3 mb-3 align-middle text-center button-nav rounded"> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">Commissions</span></div>
                     </a>
                 </li>
                 <li class="nav-item" style="margin-right: 1ch;">
                     <a id="TL" href="comms.html" class="button-nav">
-                        <div class="shadow-lg p-3 mb-3 align-middle text-center button-nav"> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">Gallery</span></div>
+                        <div class="shadow-lg p-3 mb-3 align-middle text-center button-nav rounded"> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">Gallery</span></div>
                     </a>
                 </li>
                 <li class="nav-item" style="margin-right: 1ch;">
                     <a id="TL" href="comms.html" class="button-nav">
-                        <div class="shadow-lg p-3 mb-3 align-middle text-center button-nav"> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">Contact</span></div>
+                        <div class="shadow-lg p-3 mb-3 align-middle text-center button-nav rounded"> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">Contact</span></div>
                     </a>
                 </li>
             </ul>
+
+            <h1 class="text-sm-center font-weight-bold">Koudino's Commissions!</h1>
             <img src="assets/main_pfp.png" class="img-responsive center-block rounded mx-auto d-block mx-lg-auto img-fluid" style="height: 10cm;Width:10cm">
 
             <h1 class="display-5 fw-bold lh-1 mb-3" id="fade">Hello im Okulture,</h1>
