--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta property="og:description" content="This is my website for art commissions">
     <title>Koudino's website</title>
     <link rel="stylesheet" href="assets/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/heroes/">
     <meta name="theme-color" content="#3bbdf5">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -71,11 +72,11 @@ background: linear-gradient(90deg, rgba(139,211,230,1) 0%, rgba(255,105,97,1) 10
                 </li>
             </ul>
 
-            <h1 class="text-sm-center font-weight-bold">Koudino's Commissions!</h1>
+            <h1 class="text-sm-center font-weight-bold" style="font-family: 'Pacifico', cursive;">Koudino's Commissions!</h1>
             <img src="assets/main_pfp.png" class="img-responsive center-block rounded mx-auto d-block mx-lg-auto img-fluid" style="height: 10cm;Width:10cm">
 
             <h1 class="display-5 fw-bold lh-1 mb-3" id="fade">Hello im Okulture,</h1>
-            <p class="lead">This here is my website. You can find a Gallery of my artwork here and if you're interested in some info about commissions</p>
+            <p class="lead">This here is my website. You can find a Gallery of my artwork here and if you're interested in some info about commissions<br>You can find me on <b>Discord:Koudino#6031</b></p>
 
         </div>
     </div>>
