--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
             background-color: #f7716b;
             color: #f7716b;
         }
+        
+        .img_main {
+            max-width: 50ch;
+            max-height: 50ch;
+            width: min-device-width;
+            height: min-device-width;
+        }
     </style>
 </head>
 
@@ -84,7 +91,7 @@ background: linear-gradient(90deg, rgba(139,211,230,1) 0%, rgba(255,105,97,1) 10
             <h1 class="text-sm-center font-weight-bold" style="font-family: 'Pacifico', cursive;">Koudino's Commissions!</h1>
             <br>
             <hr class="rounded-seperator">
-            <img src="assets/main_pfp.png" class="img-responsive center-block rounded mx-auto d-block mx-lg-auto img-fluid" style="height: 10cm;Width:10cm">
+            <img src="assets/main_pfp.png" class="img-responsive center-block rounded mx-auto d-block mx-lg-auto img-fluid img_main">
             <h1 class="display-5 fw-bold lh-1 mb-3 text-sm-center" id="fade">Hello im Koudino,</h1>
             <p class="lead text-sm-center">This here is my website. You can find a Gallery of my artwork here and if you're interested in some info about commissions<br>You can find me on <b>Discord:Koudino#6031</b></p>
 
