--- a/gallery.html
+++ b/gallery.html
@@ -78,7 +78,7 @@ background: linear-gradient(90deg, rgba(139,211,230,1) 0%, rgba(255,105,97,1) 10
                     </a>
                 </li>
                 <li class="nav-item" style="margin-right: 1ch;">
-                    <a id="TL" href="/index.html" class="button-nav">
+                    <a id="TL" href="index.html" class="button-nav">
                         <div class="shadow-lg p-3 mb-3 align-middle text-center button-nav rounded"> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">Return home</span></div>
                     </a>
                 </li>
