--- a/comms.html
+++ b/comms.html
@@ -88,24 +88,10 @@ background: linear-gradient(90deg, rgba(139,211,230,1) 0%, rgba(255,105,97,1) 10
                     </a>
                 </li>
             </ul>
-            <h1 class="text-sm-center font-weight-bold" style="font-family: 'Pacifico', cursive;">Koudino's Artwork!</h1>
+            <h1 class="text-sm-center font-weight-bold" style="font-family: 'Pacifico', cursive;">Koudino's Commissions!</h1>
             <hr class="rounded-seperator">
-            <div class="row">
-                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-                    <img src="assets/gallery/g1.png" class="w-100 shadow-1-strong rounded mb-4" alt="Artwork" />
-                    <img src="assets/gallery/g2.png" class="w-100 shadow-1-strong rounded mb-4" alt="Artwork" />
-                </div>
-
-                <div class="col-lg-4 mb-4 mb-lg-0">
-                    <img src="assets/gallery/g4.png" class="w-100 shadow-1-strong rounded mb-4" alt="Artwork" />
-                    <img src="assets/gallery/g3.png" class="w-100 shadow-1-strong rounded mb-4" alt="Artwork" />
-                </div>
-
-                <div class="col-lg-4 mb-4 mb-lg-0">
-                    <img src="assets/gallery/g5.png" class="w-100 shadow-1-strong rounded mb-4" alt="Artwork" />
-                    <img src="assets/gallery/g6.png" class="w-100 shadow-1-strong rounded mb-4" alt="Artwork" />
-                </div>
-            </div>
+            <p class="lead text-sm-center">My commissions are Free at the moment</b>
+            </p>
         </div>
     </div>>
 </body>
