--- a/contact.html
+++ b/contact.html
@@ -73,8 +73,8 @@ background: linear-gradient(90deg, rgba(139,211,230,1) 0%, rgba(255,105,97,1) 10
         background: radial-gradient(circle, rgba(216,255,255,1) 43%, rgba(249,235,235,1) 100%);  ">
             <ul class="nav nav-pills nav-fill">
                 <li class="nav-item" style="margin-right: 1ch;">
-                    <a id="TL" href="comms.html" class="button-nav">
-                        <div class="shadow-lg p-3 mb-3 align-middle text-center button-nav rounded"> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">Commissions</span></div>
+                    <a id="TL" href="index.html" class="button-nav">
+                        <div class="shadow-lg p-3 mb-3 align-middle text-center button-nav rounded"> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">Return home</span></div>
                     </a>
                 </li>
                 <li class="nav-item" style="margin-right: 1ch;">
@@ -83,18 +83,15 @@ background: linear-gradient(90deg, rgba(139,211,230,1) 0%, rgba(255,105,97,1) 10
                     </a>
                 </li>
                 <li class="nav-item" style="margin-right: 1ch;">
-                    <a id="TL" href="contact.html" class="button-nav">
+                    <a id="TL" href="comms.html" class="button-nav">
                         <div class="shadow-lg p-3 mb-3 align-middle text-center button-nav rounded"> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">Contact</span></div>
                     </a>
                 </li>
             </ul>
-            <h1 class="text-sm-center font-weight-bold" style="font-family: 'Pacifico', cursive;">Koudino's Commissions!</h1>
-            <br>
+            <h1 class="text-sm-center font-weight-bold" style="font-family: 'Pacifico', cursive;">Koudino's Contact Info!</h1>
             <hr class="rounded-seperator">
-            <img src="assets/main_pfp.png" class="img-responsive center-block rounded mx-auto d-block mx-lg-auto img-fluid img_main">
-            <h1 class="display-5 fw-bold lh-1 mb-3 text-sm-center" id="fade">Hello im Koudino,</h1>
-            <p class="lead text-sm-center">This here is my website. You can find a Gallery of my artwork here and if you're interested in some info about commissions<br>You can find me on <b>Discord:Koudino#6031</b></p>
-
+            <p class="lead text-sm-center">discord and shit here</b>
+            </p>
         </div>
     </div>>
 </body>
