--- a/contact.html
+++ b/contact.html
@@ -84,8 +84,8 @@ background: linear-gradient(90deg, rgba(139,211,230,1) 0%, rgba(255,105,97,1) 10
         background: radial-gradient(circle, rgba(216,255,255,1) 43%, rgba(249,235,235,1) 100%);  ">
             <ul class="nav nav-pills nav-fill">
                 <li class="nav-item" style="margin-right: 1ch;">
-                    <a id="TL" href="index.html" class="button-nav">
-                        <div class="shadow-lg p-3 mb-3 align-middle text-center button-nav rounded"> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">Return home</span></div>
+                    <a id="TL" href="comms.html" class="button-nav">
+                        <div class="shadow-lg p-3 mb-3 align-middle text-center button-nav rounded"> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">Commissions</span></div>
                     </a>
                 </li>
                 <li class="nav-item" style="margin-right: 1ch;">
@@ -94,8 +94,8 @@ background: linear-gradient(90deg, rgba(139,211,230,1) 0%, rgba(255,105,97,1) 10
                     </a>
                 </li>
                 <li class="nav-item" style="margin-right: 1ch;">
-                    <a id="TL" href="comms.html" class="button-nav">
-                        <div class="shadow-lg p-3 mb-3 align-middle text-center button-nav rounded"> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">Contact</span></div>
+                    <a id="TL" href="index.html" class="button-nav">
+                        <div class="shadow-lg p-3 mb-3 align-middle text-center button-nav rounded"> <span class="name pull-middle align-middle me-md-5" style="font-size: 4ch;">Return home</span></div>
                     </a>
                 </li>
             </ul>
