--- a/comms.html
+++ b/comms.html
@@ -90,7 +90,13 @@ background: linear-gradient(90deg, rgba(139,211,230,1) 0%, rgba(255,105,97,1) 10
             </ul>
             <h1 class="text-sm-center font-weight-bold" style="font-family: 'Pacifico', cursive;">Koudino's Commissions!</h1>
             <hr class="rounded-seperator">
-            <p class="lead text-sm-center">My commissions are Free at the moment</b>
+            <ul class="list-group">
+                <li class="list-group-item">Headshots: free</li>
+                <li class="list-group-item">Busts: free</li>
+                <li class="list-group-item">Fullbody: free</li>
+                <li class="list-group-item">Reference sheets: depends</li>
+                <li class="list-group-item">Lineart: free</li>
+            </ul>
             </p>
         </div>
     </div>>
