--- a/comms.html
+++ b/comms.html
@@ -98,6 +98,7 @@ background: linear-gradient(90deg, rgba(139,211,230,1) 0%, rgba(255,105,97,1) 10
                 <li class="list-group-item">Lineart: free</li>
             </ul>
             </p>
+            <p class="lead text-sm-center">Please note that I wont draw<b><br>-NSFW<br>-Heavy Gore<br>-Anything made to harras people</b><br> I can draw light gore</p>
         </div>
     </div>>
 </body>
