--- a/gallery.html
+++ b/gallery.html
@@ -99,6 +99,7 @@ background: linear-gradient(90deg, rgba(139,211,230,1) 0%, rgba(255,105,97,1) 10
                 <div class="col-lg-4 mb-4 mb-lg-0">
                     <img src="assets/gallery/g4.png" class="w-100 shadow-1-strong rounded mb-4" alt="Artwork" />
                     <img src="assets/gallery/g3.png" class="w-100 shadow-1-strong rounded mb-4" alt="Artwork" />
+                    <img src="assets/gallery/g7.png" class="w-100 shadow-1-strong rounded mb-4" alt="Artwork" />
                 </div>
 
                 <div class="col-lg-4 mb-4 mb-lg-0">
